lean-ray-server/quickcheck/Test/DeriveArbitrary/ParameterizedTypeTest.lean
import Quickcheck.Arbitrary
import Quickcheck.DeriveArbitrary
import Quickcheck.Attr
import Quickcheck.Testable

open Quickcheck

/-- A dummy `inductive` type isomorphic to the polymorphic `List` type,
    used as an example of a parameterized inductive type -/
inductive MyList (őĪ : Type) where
  | MyNil : MyList őĪ
  | MyCons : őĪ ‚Üí MyList őĪ ‚Üí MyList őĪ
  deriving Repr, BEq

set_option trace.quickcheck.deriving.arbitrary true in
/--
trace: [quickcheck.deriving.arbitrary] ‚Źé
    [mutual
       def arbitraryMyList‚úĚ {őĪ‚úĚ} [Quickcheck.Arbitrary‚úĚ őĪ‚úĚ] : Nat ‚Üí Quickcheck.Gen (@MyList‚úĚ őĪ‚úĚ) :=
         let rec aux_arb (fuel‚úĚ : Nat) : Quickcheck.Gen (@MyList‚úĚ őĪ‚úĚ) :=
           match fuel‚úĚ with
           | Nat.zero => Quickcheck.Gen.oneOfWithDefault (pure MyList.MyNil) [(pure MyList.MyNil)]
           | fuel'‚úĚ + 1 =>
             Quickcheck.Gen.frequency (pure MyList.MyNil)
               [(1, (pure MyList.MyNil)),
                 (fuel'‚úĚ + 1,
                   (do
                     let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ¬Ļ ‚Üź aux_arb fuel'‚úĚ
                     return MyList.MyCons a‚úĚ a‚úĚ¬Ļ))]
         fun fuel‚úĚ => aux_arb fuel‚úĚ
     end,
     instance {őĪ‚úĚ} [Quickcheck.Arbitrary‚úĚ őĪ‚úĚ] : Quickcheck.ArbitraryFueled‚úĚ (@MyList‚úĚ őĪ‚úĚ) :=
       ‚ü®arbitraryMyList‚úĚ‚ü©]
-/
#guard_msgs in
deriving instance Arbitrary for MyList

-- Test that we can successfully synthesize instances of `Arbitrary` & `ArbitraryFueled`
-- when `őĪ` is specialized to `Nat`

/-- info: instArbitraryFueledMyListOfArbitrary -/
#guard_msgs in
#synth ArbitraryFueled (MyList Nat)

/-- info: instArbitraryOfArbitraryFueled -/
#guard_msgs in
#synth Arbitrary (MyList Nat)

-- Infrastructure for testing the derived generator

/-- Converts a `MyList` to an ordinary `List` -/
def listOfMyList (l : MyList őĪ) : List őĪ :=
  match l with
  | .MyNil => []
  | .MyCons x xs => x :: listOfMyList xs

/-- Converts an ordinary `List` to a `MyList` -/
def myListOfList (l : List őĪ) : MyList őĪ :=
  match l with
  | [] => .MyNil
  | x :: xs => .MyCons x (myListOfList xs)

/-- Trivial shrinker for `MyList őĪ`.
    (Under the hood, this converts the `MyList` to an ordinary `List`,
    uses the default `Shrinkable` instance for `List őĪ`, then converts it back to `MyList őĪ`.) -/
def shrinkMyList [Shrinkable őĪ] (myList : MyList őĪ) : List (MyList őĪ) :=
  let l := listOfMyList myList
  myListOfList <$> Shrinkable.shrink l

/-- `Shrinkable` instance for `MyList őĪ` -/
instance [Shrinkable őĪ] : Shrinkable (MyList őĪ) where
  shrink := shrinkMyList

/- `SampleableExt` instance for `MyList őĪ`.

   (Note that the proxy type is still `MyList őĪ` in this instance, and not `List őĪ`,
   since we are creating the `SampleableExt` instance using `SampleableExt.mkSelfContained`.) -/
instance [Repr őĪ] [Shrinkable őĪ] [Arbitrary őĪ] : SampleableExt (MyList őĪ) :=
  SampleableExt.mkSelfContained Arbitrary.arbitrary

/-!
To test whether the derived generator can generate counterexamples,
we create an erroneous property `‚ąÄ l : MyList Nat, reverse (reverse l) != l`,
and ask Quickcheck to falsify it.

(This property is false, since `reverse` is an involution on `List őĪ`, and
`MyList őĪ` is isomorphic to `List őĪ`.)
-/

/-- Returns the elements of a `MyList őĪ` in reverse order.

    Implementation adapted from the Haskell `List.reverse` function.
    https://hackage.haskell.org/package/base-4.17.1.0/docs/Prelude.html#v:reverse -/
def reverse (l : MyList őĪ) : MyList őĪ :=
  rev l .MyNil
    where
      rev (l : MyList őĪ) (acc : MyList őĪ) :=
        match l with
        | .MyNil => acc
        | .MyCons x xs => rev xs (.MyCons x acc)

/-- error: Found a counter-example! -/
#guard_msgs in
#eval Testable.check (‚ąÄ l : MyList Nat, reverse (reverse l) != l)
  (cfg := {numInst := 10, maxSize := 5, quiet := true})
